Open Bets Popup (Update values according to event info)

--- a/stake.html
+++ b/stake.html
@@ -1436,16 +1436,16 @@
                                 </div>
                                 <div class="stake display-flex-btw">
                                     <div class="obe-color-ash">Total Stake</div>
-                                    <div class="align-center"><span>$2,207.85</span> <img src="Gallery\crypto-gallery\matic.svg" alt=""></div>
+                                    <div class="align-center total-stake"><span>$2,207.85</span> <img src="Gallery\crypto-gallery\matic.svg" alt=""></div>
                                 </div>
                                 <div class="payout display-flex-btw">
                                     <div class="obe-color-ash">Est. Payout</div>
-                                    <div class="align-center"><span>$2,207.85</span> <img src="Gallery\crypto-gallery\matic.svg" alt=""></div>
+                                    <div class="align-center est-payout"><span>$2,207.85</span> <img src="Gallery\crypto-gallery\matic.svg" alt=""></div>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="add-mc display-flex-center"><button>Add 2 bets to my Bet Slip</button></div>
+                        <div class="add-mc display-flex-center"><button>Add <span>2 bets</span> to my Bet Slip</button></div>
                     </div>
                 </div>
 
