Open Bets Popup (Update values for Multi Event)

--- a/stake.html
+++ b/stake.html
@@ -1395,25 +1395,10 @@
                         <div class="booking-time align-center obe-color-ash">7:40PM 2/5/2023</div>
 
                         <div class="obe-match-card-container">
-                            <div class="obe-match-card obe-mc-first">
-                                <div class="obe-mc-title align-center"><img src="Gallery\gallery1\soccer.svg" alt=""><span>FC Inter Milano - AC Milan</span></div>
-                                <div class="obe-mc-type obe-color-ash">Both Teams to Score</div>
-                                <div class="obe-mc-pick-odd display-flex-btw"><span class="pick">Yes</span> <span class="odd">1.94</span></div>
-                                <div class="obe-match-time display-flex-btw obe-color-ash">
-                                    <div class="time-left align-center">
-                                        <img src="Gallery\gallery3\count-down.svg" alt=""> 
-                                        <span>Starts in 10 Minutes</span>
-                                    </div>
-                                    <div class="align-center">
-                                        <img src="Gallery\gallery3\live-stream.svg" id="live-stream" alt="">
-                                        <img src="Gallery\gallery2\live-stats.svg" alt="">
-                                    </div>
-                                </div>
-                            </div>
                             <div class="obe-match-card obe-mc-last">
-                                <div class="obe-mc-title align-center"><img src="Gallery\gallery1\soccer.svg" alt=""><span>FC Barcelona - Sevilla FC</span></div>
+                                <div class="obe-mc-title align-center"><img src="Gallery\gallery1\soccer.svg" alt=""><span>Athletic Bilbao - Sevilla FC</span></div>
                                 <div class="obe-mc-type obe-color-ash">1x2</div>
-                                <div class="obe-mc-pick-odd display-flex-btw"><span class="pick">FC Barcelona</span> <span class="odd">1.33</span></div>
+                                <div class="obe-mc-pick-odd display-flex-btw"><span class="pick">Athletic Bilbao</span> <span class="odd">1.70</span></div>
                                 <div class="obe-match-time display-flex-btw obe-color-ash">
                                     <div class="time-left align-center">
                                         <img src="Gallery\gallery3\count-down.svg" alt=""> 
