Responsiveness(Tablet) Entry 2B(Resize1)

--- a/stake.html
+++ b/stake.html
@@ -1434,7 +1434,7 @@
         </div>
     </div>
 
-    <div class="cashier">
+    <div class="cashier minimize-cashier">
         <!-- Bet Slip and My Bet Menu & element for closing Cashier Section -->
         <div class="bl-top display-flex-btw">
             <div class="bet-menu align-center">
