Responsiveness(Tablet) Entry 4(Big Tablets)

--- a/stake.html
+++ b/stake.html
@@ -1437,6 +1437,11 @@
         </div>
     </div>
 
+    <!-- Dark Background shown when Stake Side Bar(Detailed Side Menu) is Visible at Tablet width -->
+    <div class="tablet-dark-bg">
+        <div class="popup-background"></div>
+    </div>
+
     <div class="cashier minimize-cashier">
         <!-- Bet Slip and My Bet Menu & element for closing Cashier Section -->
         <div class="bl-top display-flex-btw">
@@ -1599,7 +1604,7 @@
         </div>
     </div>
 
-    <!-- Popup shown when an Event in Open Bets Section is clicked -->
+    <!-- Popup containing Details for an Event clicked in Open Bets (High Rollers) Section -->
     <div class="view-open-bets">
         <div class="popup-background"></div>
         <div class="obe-container display-flex-center">
