Responsiveness(Tablet) Entry 4(Finished Responsiveness for Big Tablets)

--- a/stake.html
+++ b/stake.html
@@ -275,7 +275,7 @@
                             </div>
                             <div class="menu2-right">
                                 <div class="three-way">
-                                    <div class="display-flex-center">
+                                    <div class="align-center">
                                         <div class="menu2-image display-flex-center">
                                             <img src="Gallery\gallery2\three-way.svg" alt="">
                                             <div class="menu2-popup"><span>Three Way</span></div>
@@ -291,7 +291,7 @@
                                     </div>
                                 </div>
                                 <div class="standard">
-                                    <div class="display-flex-center">
+                                    <div class="align-center">
                                         <div class="menu2-image display-flex-center">
                                             <img src="Gallery\gallery2\standard.svg" alt="">
                                             <div class="menu2-popup popup-standard"><span>Standard</span></div>
@@ -300,7 +300,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div class="menu2-right">Standard</div> -->
                         </div>
                     </div>
     
