Responsiveness(Tablet) Entry 4(Finished Responsiveness for Big Tablets)

--- a/stake.html
+++ b/stake.html
@@ -242,9 +242,9 @@
                     </div>
                 </div>
     
-                <div class="ft-extra display-flex-btw">
-                    <div class="ft-search align-center"><img src="Gallery\gallery2\search.svg" alt="">Search</div>
-                    <img src="Gallery\gallery2\profile.svg" alt="" class="cursor">
+                <div class="ft-extra align-center">
+                    <div class="ft-search align-center"><img src="Gallery\gallery2\search.svg" alt=""><span>Search</span></div>
+                    <div class="user-profile"><img src="Gallery\gallery2\profile.svg" alt="" class="cursor"></div>
                     <div class="chat">
                         <div class="chat-icon cursor"><img src="Gallery\gallery2\message.svg" alt=""></div>
                         <div class="chat-dropdown">
