Responsiveness(Smaller-Tablets & Mobile) Entry 1(Finished The Basics)

--- a/stake.html
+++ b/stake.html
@@ -1428,8 +1428,33 @@
                                 <div class="section4-part3">
                                     Support <span>support@stake.com</span> | Partners <span>partners@stake.com</span> | <span>Press press@stake.com</span>
                                 </div>
+
+                                <div class="xmc-group display-flex-center"><img src="Gallery\gallery3\xcm-verified.svg" alt=""></div>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="tablet-mobile-menu display-flex-btw">
+                    <div class="tmm-item">
+                        <div class="tmm-image"><img src="Gallery\gallery3\menu.svg" alt=""></div>
+                        <div>Menu</div>
+                    </div>
+                    <div class="tmm-item">
+                        <div class="tmm-image"><img src="Gallery\gallery3\mobile-search.svg" alt=""></div>
+                        <div>Search</div>
+                    </div>
+                    <div class="tmm-item">
+                        <div class="tmm-image"><img src="Gallery\gallery3\mobile-chat.svg" alt=""></div>
+                        <div>Chat</div>
+                    </div>
+                    <div class="tmm-item">
+                        <div class="tmm-image"><img src="Gallery\gallery3\mobile-bl.svg" alt=""></div>
+                        <div>Bet Slip</div>
+                    </div>
+                    <div class="tmm-item">
+                        <div class="tmm-image"><img src="Gallery\gallery1\casino.svg" alt=""></div>
+                        <div>Casino</div>
                     </div>
                 </div>
             </div>
