Responsiveness(Smaller-Tablets & Mobile) Entry 2(Responsive Mobile View)

--- a/stake.html
+++ b/stake.html
@@ -20,6 +20,10 @@
                     <div class="fl-head-image"><img src="Gallery\gallery1\alter-sidebar.svg" alt=""></div>
                     <div class="fl-head-tooltip display-flex-center">Minimize Sidebar</div>
                 </div>
+                <div class="close-menu">
+                    <div class="close-menu-image"><img src="Gallery\gallery2\cancel.svg" alt=""></div>
+                    <div class="close-menu-tooltip">Collapse Sidebar</div>
+                </div>
             </div>
             <div class="fl-body">
                 <div class="fl-casino">
@@ -1436,7 +1440,7 @@
                 </div>
 
                 <div class="tablet-mobile-menu display-flex-btw">
-                    <div class="tmm-item">
+                    <div class="tmm-item tmm-menu">
                         <div class="tmm-image"><img src="Gallery\gallery3\menu.svg" alt=""></div>
                         <div>Menu</div>
                     </div>
@@ -1448,9 +1452,9 @@
                         <div class="tmm-image"><img src="Gallery\gallery3\mobile-chat.svg" alt=""></div>
                         <div>Chat</div>
                     </div>
-                    <div class="tmm-item">
+                    <div class="tmm-item tmm-betslip">
                         <div class="tmm-image"><img src="Gallery\gallery3\mobile-bl.svg" alt=""></div>
-                        <div>Bet Slip</div>
+                        <div>Bet Slip <span class="tmm-bet-count bet-count"></span></div>
                     </div>
                     <div class="tmm-item">
                         <div class="tmm-image"><img src="Gallery\gallery1\casino.svg" alt=""></div>
