Added User Profile dropdown

--- a/stake.html
+++ b/stake.html
@@ -248,8 +248,7 @@
     
                 <div class="ft-extra align-center">
                     <div class="ft-search align-center"><img src="Gallery/gallery2/search.svg" alt=""><span>Search</span></div>
-                    <div class="user-profile"><img src="Gallery/gallery2/profile.svg" alt=""></div>
-                    <!-- <div class="user-profile">
+                    <div class="user-profile">
                         <div class="user-profile-icon cursor"><img src="Gallery/gallery2/profile.svg" alt=""></div>
                         <div class="user-profile-dropdown">
                             <div class="dropdown-option cursor align-center"><img src="Gallery/gallery2/chat.svg" alt="">Wallet</div>
@@ -264,7 +263,7 @@
                             <div class="dropdown-option cursor align-center"><img src="Gallery/gallery2/bet-slip.svg" alt="">Live Support</div>
                             <div class="dropdown-option cursor align-center"><img src="Gallery/gallery2/chat.svg" alt="">Logout</div>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="chat">
                         <div class="chat-icon cursor"><img src="Gallery/gallery2/message.svg" alt=""></div>
                         <div class="chat-dropdown">
