Clean Up (Fixed Resizing Issues)

--- a/stake.html
+++ b/stake.html
@@ -11,6 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 <body>
+    <!-- Detailed Side Menu -->
     <div class="stake-side-bar">
         <div class="fixed-left">
             <div class="fl-head">
@@ -121,6 +122,7 @@
         </div>
     </div>
 
+    <!-- Small Side Menu -->
     <div class="small-side-bar expand">
         <div class="ssb-head display-flex-center">
             <div class="ssb-hover ssb-head-image"><img src="Gallery/gallery1/alter-sidebar.svg" alt=""></div>
@@ -202,6 +204,7 @@
         </div>
     </div>
 
+    <!-- Main Page for Selecting Odds -->
     <div class="odds-page">
         <div class="fixed-top display-flex-center">
             <div class="center-ft display-flex-btw">
@@ -1485,6 +1488,7 @@
         <div class="popup-background"></div>
     </div>
 
+    <!-- Bet Slip (Section for placing Bets) -->
     <div class="cashier minimize-cashier">
         <!-- Bet Slip and My Bet Menu & element for closing Cashier Section -->
         <div class="bl-top display-flex-btw">
