Clean Up (Issues Fixed: Scrollable Main Page Menu's, Responsive Hover effect for Main Page Odds Type, etc)

--- a/index.html
+++ b/index.html
@@ -290,10 +290,12 @@
                             </div>
                         </div>
                         <div class="bs-menu2 display-flex-btw">
-                            <div class="menu2-left display-flex-center">
-                                <div class="bs-menu-live menu-option menu-active display-flex-center">Live & Upcoming</div>
-                                <div class="bs-menu-outright menu-option display-flex-center">Outrights</div>
-                                <div class="bs-menu-as menu-option display-flex-center">All Soccer</div>
+                            <div class="scroll-menu">
+                                <div class="menu2-left align-center">
+                                    <div class="bs-menu-live menu-option menu-active display-flex-center">Live & Upcoming</div>
+                                    <div class="bs-menu-outright menu-option display-flex-center">Outrights</div>
+                                    <div class="bs-menu-as menu-option display-flex-center">All Soccer</div>
+                                </div>
                             </div>
                             <div class="menu2-right">
                                 <div class="three-way">
@@ -1258,10 +1260,12 @@
                     </div>
 
                     <div class="open-bets">
-                        <div class="ob-header display-flex-center">
-                            <div class="bs-menu-bets menu-option display-flex-center">All Bets</div>
-                            <div class="bs-menu-hr menu-option menu-active display-flex-center">High Rollers</div>
-                            <div class="bs-menu-rl menu-option display-flex-center">Race Leaderboard <span></span></div>
+                        <div class="scroll-menu">
+                            <div class="ob-header display-flex-center">
+                                <div class="bs-menu-bets menu-option display-flex-center">All Bets</div>
+                                <div class="bs-menu-hr menu-option menu-active display-flex-center">High Rollers</div>
+                                <div class="bs-menu-rl menu-option display-flex-center">Race Leaderboard <span></span></div>
+                            </div>
                         </div>
 
                         <div class="ob-contents">
