Fixed Mobile Height issues (Entry 3)

--- a/index.html
+++ b/index.html
@@ -1423,7 +1423,7 @@
                                 <div class="fs2-item align-center"><img src="Gallery/gallery3/Bitcoin Cash logo.svg" alt=""></div>
                                 <div class="fs2-item align-center"><img src="Gallery/gallery3/Tether logo.svg" alt=""></div>
                                 <div class="fs2-item align-center"><img src="Gallery/gallery3/Gamble Safe.svg" alt=""></div>
-                                <div class="fs2-item align-center"><img src="Gallery/gallery3/18+ logo.svg" alt="18+"></div>
+                                <div class="fs2-item align-center">18+</div>
                             </div>
                             <div class="footer-line"></div>
 
