Wrap Up (Created intro animation and Fixed Some Resizing Issues

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 <body>
+    <div class="intro display-flex-center">
+        <div>
+            <div class="small-logo"><img src="Gallery\gallery3\stake-mini-logo.svg" alt=""></div>
+            <div class="big-logo"><img src="Gallery\gallery2\stake-logo.svg" alt=""></div>
+        </div>
+    </div>
+
     <!-- Detailed Side Menu -->
     <div class="stake-side-bar">
         <div class="fixed-left">
