--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/126ab056cd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stake.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="icon" type="image/svg+xml" href="/Gallery/gallery3/stake-mini-logo.svg" />
     <script src="stake.js" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
